# audiotown

./: .gitignore  LICENSE  README.md  pyproject.toml
src/audiotown/: __init__.py  consts.py  converter.py  logger.py  main.py  report.py  stats.py  utils.py
src/audiotown/consts/: __init__.py  app_config.py  app_context.py  audio_family.py  audio_format.py  audio_readable.py  audio_record.py  audio_stream.py  audiotown_encoder.py  auido_folder_stats.py  birate_tier.py  cmd_arg_config.py  codec_type.py  consts.py  conversion.py  disk_usage_snapshot.py  duplicate_group.py  ffmpeg_config.py  folder_stats.py  media_folder_stats.py  meta_content.py  probe_result.py  quality_tier.py  stream_info.py  subcommand_name.py  type_summary.py
src/audiotown/consts/audio/: __init__.py  audio_bitrate_kbps.py  audio_family.py  audio_folder_stats.py  audio_format.py  audio_readable.py  audio_record.py  duplicate_group.py  quality_tier.py
src/audiotown/consts/basics/: __init__.py  attached_pic_spec.py  ffmpeg_config.py  stream_codec_type.py
src/audiotown/consts/lang/: __init__.py  detected_language.py  lang_hint.py  lang_map.py  lang_repair_candidate.py  lang_script_count.py  lang_text_quality.py
src/audiotown/consts/video/: __init__.py  apple_compatibility.py  apple_compatiblity_level.py  attachment_stream_spec.py  audio_stream_spec.py  codec_type.py  compatiblity_level.py  conversion_preset.py  hdr_type.py  media_action.py  media_info.py  pixel_format_policy.py  policy_decision.py  quality_profile.py  repair_mode.py  resolution_semantic_label.py  speed_profile.py  subtitle_stream_spec.py  video_codec.py  video_container.py  video_duplicate_group.py  video_encoder.py  video_folder_stats.py  video_readable.py  video_record.py  video_stream_spec.py
src/audiotown/encoders/: __init__.py  audiotown_encoder.py
src/audiotown/services/: __init__.py  command_builder_service.py  convert_service.py  language.py  policy_service.py  probe_service.py  scan_service.py  update_avi.py
src/audiotown/utils/: __init__.py  dataclass_to_csv.py  duration_string.py  extract_year_from_str.py  find_external_cover.py  make_json_safe.py  safe_cast.py  safe_division.py  safe_json_load.py  sanitize_meta.py  size_string.py  terminal_formatter.py  to_int.py  utils.py
src/audiotown/video/: consts.py  inspector.py  update_avi.py
src/audiotown/video/consts/: __init__.py  audio_codec.py  audio_encoder.py  audio_stream_spec.py  lang_map.py  media_action.py  media_action_mode.py  media_report.py  pixel_format_policy.py  policy_decision.py  probe_summary.py  subtitle_mode.py  subtitle_stream_spec.py  video_container.py  video_stream_spec.py
src/audiotown/video/policies/: __init__.py  avi.py  (+8 more)
tests/: test_main.py
