[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"] 

[project]
name = "audiotown"
version = "1.0.1"
authors = [
  { name="Stephen Wang", email="holleratme420@gmail.com" },
]
description = "Convert Flac to Apple '.m4a' files (alac, aac)"
readme = "README.md"
license = "MIT"
license-files = ["LICEN[CS]E*"]
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "click>=8.3",
    "wcwidth>=0.2.13"
]

[project.scripts]
audiotown = "audiotown.main:cli_runner"

[project.urls]
Homepage = "https://github.com/zjgcainiao/audiotown"
Issues = "https://github.com/zjgcainiao/audiotown/issues"