[build-system]
requires = ["setuptools>=80.9.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"] 

[tool.setuptools.dynamic]
version = {attr = "audiotown.__version__"}

[project]
name = "audiotown"
dynamic = ["version"] 
requires-python = ">=3.10"
readme = "README.md"
authors = [
  { name="Stephen Wang", email="holleratme420@gmail.com" },
]
description = "Convert Flac to Apple '.m4a' files (alac, aac)"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]


dependencies = [
    "click>=8.3",
    "wcwidth>=0.2"
]

[project.scripts]
audiotown = "audiotown.main:cli_runner"

[project.urls]
Homepage = "https://github.com/zjgcainiao/audiotown"
Repository = "https://github.com/zjgcainiao/audiotown.git"
Issues = "https://github.com/zjgcainiao/audiotown/issues"